# pair-hmm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: haplotype.fa  output.bam  read.fa  table
include/pairhmm/: fixed_point_suzuki_pairhmm.hpp  naive_pairhmm.hpp  nw_pairhmm.hpp  pairhmm.hpp  suzuki_pairhmm.hpp
include/table/: STR_table.hpp  fixed_point_table.hpp  probability_table.hpp  table.hpp
include/utils/: constant.hpp  fixed_point.hpp  options.hpp  utils.hpp
src/: main.cpp
src/pairhmm/: naive_pairhmm.cpp  nw_pairhmm.cpp  pairhmm.cpp  suzuki_pairhmm.cpp
src/table/: STR_table.cpp  probability_table.cpp  table.cpp
src/utils/: constant.cpp  options.cpp
tests/: CMakeLists.txt
tests/pairhmm/: pairhmm.cpp
tests/table/: STR_table.cpp  probability_table.cpp
